k8s/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: backend

spec:
  selector:
    app: expense-backend

  ports:
    - port: 8084
      targetPort: 8084

  type: ClusterIP
