k8s/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: expense-frontend-service

spec:
  selector:
    app: expense-frontend

  ports:
    - port: 80
      targetPort: 80

  type: NodePort
