k8s/expense-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: expense-ingress
  namespace: dev

spec:
  ingressClassName: nginx

  rules:
  - host: expense.local

    http:
      paths:

      - path: /
        pathType: Prefix

        backend:
          service:
            name: expense-frontend-service
            port:
              number: 80

      - path: /api
        pathType: Prefix

        backend:
          service:
            name: backend
            port:
              number: 8084
